# rordle

./: .pre-commit-config.yaml  Cargo.toml
.github/workflows/: release.yml  rust.yml
data/: cache
src/: game.rs  lib.rs  main.rs  play.rs  roget.rs  solver.rs
ui/: window.slint
