[package]
name = "rordle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
serde_json = "1.0.85"
slint = "1.4.1"

[profile.release]
strip = true
opt-level = 3
lto = true
panic = "abort"


[[bin]]
name = "game"
path = "src/play.rs"

[[bin]]
name = "solver"
path = "src/roget.rs"
