[package]
name = "rordle"
version = "0.1.0"
edition = "2021"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
rayon = "1.10.0"
serde_json = "1.0.85"
slint = {version="1.14.1",features=["backend-android-activity-05"]}
tracing = "0.1.40"

[build-dependencies]
slint-build = "1.14.1"

[profile.release]
strip = true
codegen-units = 1
opt-level = 3
lto = true
panic = "abort"

[lib]
crate-type=["cdylib"]


[[bin]]
name = "game"
path = "src/play.rs"

[[bin]]
name = "solver"
path = "src/roget.rs"

[package.metadata.android.signing.release]
path = "/home/josh/.android/debug.keystore"
keystore_password = "android"
